[gd_scene load_steps=5 format=3 uid="uid://dxxsxkfdgg3jk"]

[ext_resource type="Script" uid="uid://choowlq07pdfs" path="res://Graphic Elements/Shop/purchasable_wrapper.gd" id="1_nu11u"]
[ext_resource type="PackedScene" uid="uid://veyvlsts5sax" path="res://Graphic Elements/Shop/purchasable_scene.tscn" id="1_wpdrp"]
[ext_resource type="PackedScene" uid="uid://b8u7rb34016g7" path="res://Graphic Elements/Tooltips/encyclopedia_text_label.tscn" id="2_nu11u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2yk7k"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.243137, 0.243137, 0.243137, 1)
border_width_left = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="PurchasableWrapper" type="VBoxContainer"]
offset_right = 292.0
offset_bottom = 36.0
theme_override_constants/separation = 0
script = ExtResource("1_nu11u")

[node name="PurchasableScene" parent="." instance=ExtResource("1_wpdrp")]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2yk7k")

[node name="EncyclopediaTextLabel" parent="PanelContainer" instance=ExtResource("2_nu11u")]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
mouse_filter = 2
text = ""

[connection signal="myReadySignal" from="PurchasableScene" to="." method="_on_purchasable_scene_my_ready_signal"]
[connection signal="wasDeselected" from="PurchasableScene" to="." method="_on_purchasable_scene_was_deselected"]
[connection signal="wasSelected" from="PurchasableScene" to="." method="_on_purchasable_scene_was_selected"]
